remove unused files

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -12,7 +12,8 @@ SET(SOURCE_ROOT ${PROJECT_SOURCE_DIR}/src)
 SET(TINY_ROOT ${PROJECT_SOURCE_DIR}/../../tiny)
 
 INCLUDE_DIRECTORIES(${SOURCE_ROOT}/IotTypedef)
-INCLUDE_DIRECTORIES(${SOURCE_ROOT}/IotThingManager)
+INCLUDE_DIRECTORIES(${SOURCE_ROOT}/IotFactory)
+INCLUDE_DIRECTORIES(${SOURCE_ROOT}/IotLauncher)
 
 INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/TinyBase)
 INCLUDE_DIRECTORIES(${TINY_ROOT}/source/src/TinyPortable)
