add DeviceConfig & AccessoryConfig

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,8 @@ MESSAGE(STATUS "library output: ${LIBRARY_OUTPUT_PATH}")
 
 SET(IotTypedef_Header
         ${SOURCE_ROOT}/IotTypedef/constant/iot_constant.h
+        ${SOURCE_ROOT}/IotTypedef/device/config/DeviceConfig.h
+        ${SOURCE_ROOT}/IotTypedef/device/config/AccessoryConfig.h
         ${SOURCE_ROOT}/IotTypedef/device/Device.h
         ${SOURCE_ROOT}/IotTypedef/device/Service.h
         ${SOURCE_ROOT}/IotTypedef/device/Action.h
