--- a/source/src/IotTypedef/CMakeLists.txt
+++ b/source/src/IotTypedef/CMakeLists.txt
@@ -18,7 +18,7 @@ SET(Device_Header
         device/config/AccessoryCategoryIdentifier.h
         device/config/AccessoryConfig.h
         device/config/DeviceConfig.h
-        device/Device.h
+        device/Thing.h
         device/Service.h
         device/Action.h
         device/Event.h
@@ -31,7 +31,7 @@ SET(Device_Header
     )
 
 SET(Device_Source
-        device/Device.c
+        device/Thing.c
         device/Service.c
         device/Action.c
         device/Event.c
