mv device/Thing to thing/Thing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,10 +49,10 @@ MESSAGE(STATUS "library output: ${LIBRARY_OUTPUT_PATH}")
 
 SET(IotTypedef_Header
         ${SOURCE_ROOT}/IotTypedef/constant/iot_constant.h
-        ${SOURCE_ROOT}/IotTypedef/device/config/DeviceConfig.h
-        ${SOURCE_ROOT}/IotTypedef/device/config/AccessoryCategoryIdentifier.h
-        ${SOURCE_ROOT}/IotTypedef/device/config/AccessoryConfig.h
-        ${SOURCE_ROOT}/IotTypedef/device/Thing.h
+        ${SOURCE_ROOT}/IotTypedef/thing/Thing.h
+        ${SOURCE_ROOT}/IotTypedef/thing/config/DeviceConfig.h
+        ${SOURCE_ROOT}/IotTypedef/thing/config/AccessoryCategoryIdentifier.h
+        ${SOURCE_ROOT}/IotTypedef/thing/config/AccessoryConfig.h
         ${SOURCE_ROOT}/IotTypedef/device/Service.h
         ${SOURCE_ROOT}/IotTypedef/device/Action.h
         ${SOURCE_ROOT}/IotTypedef/device/Event.h
@@ -81,7 +81,7 @@ SET(IotTypedef_Header
         )
 
 SET(IotTypedef_Source
-        ${SOURCE_ROOT}/IotTypedef/device/Thing.c
+        ${SOURCE_ROOT}/IotTypedef/thing/Thing.c
         ${SOURCE_ROOT}/IotTypedef/device/Service.c
         ${SOURCE_ROOT}/IotTypedef/device/Action.c
         ${SOURCE_ROOT}/IotTypedef/device/Event.c
